<resources>
    <string name="app_name">My Application_new</string>
    <string name="text2">Activity Main 2</string>
    <string name="response_msg">you are defeated!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">hello_world</string>
    <string name="RoleName">RoleName</string>
    <string name="RoleLevel">RoleLevel</string>
    <string name="RoleID">RoleID</string>
    <string name="RoleBalance">RoleBalance</string>
    <string name="VipLevel">VipLevel</string>
    <string name="PartyName">PartyName</string>
    <string name="facebook_app_id" translatable="false">1010649272887178</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1010649272887178</string>
    <string name="facebook_client_token" translatable="false">4c8ae0edf3317205378e9a48ab2d646e</string>

    <string name="next_step">下一步</string>
    <string name="encounter_problem">遇到问题</string>
    <string name="send_to_phone_content">发送至%s</string>
    <string name="write_phone_content">请填写手机短信验证码</string>
    <string name="welcome_user">%s，欢迎进入游戏</string>
    <string name="privacy_tip">我已详细阅读并同意《用户协议》、《隐私政策》和《保密协议》</string>
    <string name="other_account_login">其他账号登录</string>
    <string name="last_login_time">上次登录 %s</string>
    <string name="qq_info">请联系客服QQ：1256442266</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="game_register_identity_tip"><![CDATA[亲爱的玩家，非常抱歉，根据国家新闻出版署《未成年人沉迷网络游戏的通知》，《关于进一步管理切实防止未成年人沉迷网络游戏的通知》，未实名账号不可体验游戏，请尽快完成实名登记。]]></string>
    <string name="start_game">开始游戏</string>
    <string name="user_centre">用户中心</string>
    <string name="not_logged_in">尚未登录</string>
    <string name="pgsoul_confidentiality_agreement_title">盘古魂游戏保密协议</string>
    <string name="pgsoul_user_policy_title">盘古魂游戏用户协议</string>
    <string name="pgsoul_privacy_policy_title">盘古魂游戏隐私保护政策</string>
    <string name="select_pay_way">选择支付方式</string>
    <string name="exit_game">退出游戏</string>
    <string name="write_real_name">请填写真实姓名</string>
    <string name="write_real_identity">请填写真实有效的身份证号</string>
    <string name="default_china">中国大陆(默认)</string>
    <string name="identity">身份证号：</string>
    <string name="real_name">姓名：</string>
    <string name="country_or_area">国家/地区：</string>
    <string name="game_real_name_register">游戏实名登记</string>
    <string name="switch_account">切换账号</string>
    <string name="cancel">取消</string>
    <string name="confirm_delete">确认删除</string>
    <string name="confirm_delete_tip">是否删除该账号的登录记录？</string>
    <string name="confirm_exit_game">确认退出游戏？</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="verify_code_input_tip">验证码：</string>
    <string name="new_phone_input_tip">新手机号：</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="old_phone_invalid">原手机号不可用</string>
    <string name="old_phone_input_tip">原手机号：</string>
    <string name="modify_phone">修改绑定手机</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="confidentiality_agreement">保密协议</string>
    <string name="user_policy">用户协议</string>
    <string name="login">登录</string>
    <string name="add_new_account">添加新账号</string>
    <string name="finish">完成</string>
    <string name="delete_record">删除记录</string>
    <string name="just_now">刚刚</string>
    <string name="few_minutes_ago">分前</string>
    <string name="few_hours_ago">小时前</string>
    <string name="game_permission_notice">        在您使用盘古魂服务前，请您务必审慎阅读、充分理解%1$s和%2$s的各条款。如您已详细阅读并同意%1$s和%2$s，请点击“同意”开始使用我们的服务。为确保您的游戏体验，我们将在您使用我们的服务过程中，同时申请以下权限，届时您可选择同意或不同意开启相关权限，若是不同意则会影响部分功能:\n·存储：保存图片并体验游戏分享和资源下载更新等游戏功能。</string>
    <string name="attain_permission_fail_tip">获取权限失败,请在后台配置\n否则出现异常</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="logout">注销登录</string>
    <string name="pg_exit_game_tip">快速再按一次，退出游戏</string>
    <string name="get_real_name_info_fail_1">获取实名认证信息失败 1</string>
    <string name="get_real_name_info_fail_2">获取实名认证信息失败 2</string>
    <string name="minors_cannot_enter_game">根据18+适龄限制，未成年人无法进入游戏</string>
    <string name="network_error_get_real_name">网络连接异常,获取防沉迷信息失败</string>
    <string name="network_exception">网络连接异常</string>
    <string name="register_fail_info_error">登记失败，信息有误</string>
    <string name="register_fail">登记失败</string>
    <string name="need_confirm_policy">请先同意相关政策条款再继续登录</string>
    <string name="network_fail_retry">网络连接失败，请稍后重试</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="phone_error_retry">手机号有误，请重新输入</string>
    <string name="has_send_verify_code">验证码已发送</string>
    <string name="not_test_user">您不是测试用户，无法登录</string>
    <string name="device_limit">已经达到最大设备登录限制</string>
    <string name="wx_pay_params_parse_error">微信支付参数解析错误</string>
    <string name="parse_purchase_order_info">解析支付订单失败</string>
    <string name="purchase_order_params_miss">支付订单部分参数丢失</string>
    <string name="generate_purchase_order_fail">支付订单生成失败</string>
    <string name="generate_purchase_order_locked">上笔订单正在处理，请稍后重试</string>
    <string name="purchase_order_parse_fail">支付订单解析失败</string>
    <string name="purchase_panel_open_fail">支付面板打开失败</string>
    <string name="purchase_order_info_error">支付订单信息有误</string>
    <string name="please_select_purchase_way">请选择支付方式</string>
    <string name="cache_invalid">缓存失效</string>
    <string name="login_fail_params_parse_error">登录失败，参数解析错误</string>
    <string name="attain_user_info_fail">获取用户信息失败</string>
    <string name="parse_exception">解析异常</string>
    <string name="phone_exception">手机号异常</string>
    <string name="retry">重试</string>
    <string name="attain_headimg_error">获取头像错误</string>
    <string name="attain_headimg_cancel">获取头像取消</string>
    <string name="token_invalid">Token失效</string>
    <string name="login_error_params_null">登录错误 参数为空</string>
    <string name="login_error_params_parse_error">登录错误 参数解析错误</string>
    <string name="phone_error">手机号有误</string>
    <string name="cannot_same_with_old_phone">不能与旧手机号相同</string>
    <string name="verify_code_error">验证码错误</string>
    <string name="verify_success">校验成功</string>
    <string name="modify_success">修改成功</string>
    <string name="resend">重新发送</string>
    <string name="account_info_invalid_relogin">账号信息失效，请重新登录</string>
    <string name="not_real_name_account_not_play">未实名账号不可体验游戏</string>
    <string name="antiaddiction_check_fail">防沉迷验证失败</string>
    <string name="real_name_register">实名登记</string>
    <string name="non_paid_version">非计费版本，本次测试暂未开放</string>
    <string name="google_login_cache_invalid">Google登录缓存失效</string>
    <string name="purchase_cancel">支付取消</string>
    <string name="purchase_timeout">支付查询超时</string>
    <string name="unknown_error">未知错误</string>
    <string name="wx_pay_name">微信</string>
    <string name="ali_pay_name">支付宝</string>
</resources>
