<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/main_btn_circle_shape"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.21"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />


    <TextView
        android:id="@+id/tv_other_account_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_account_login"
        android:textColor="@color/pgsoul_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.533" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_user_list_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity = "left"
        android:paddingStart="-50dp"
        android:background="@color/user_list_background"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/pic_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.2" />

        <ImageView
            android:id="@+id/iv_often_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/pic_use" />

        <ImageView
            android:id="@+id/iv_time_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_display_name"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.525"
            app:srcCompat="@drawable/icon_time" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.22"
            app:layout_constraintStart_toStartOf="@+id/iv_often_label"
            app:layout_constraintTop_toTopOf="@+id/tv_display_name"
            app:layout_constraintVertical_bias="0.48"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/tv_display_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:gravity="left|center"
            android:letterSpacing="0.1"
            android:maxLines="1"
            android:paddingBottom="2dp"
            android:paddingTop="8dp"
            android:text="158****1459"
            android:textStyle="bold"
            android:textColor="@color/common_font_color"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/iv_often_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/iv_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_last_login_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="left|center"
            android:text="@string/last_login_time"
            android:textSize="12sp"
            android:textColor="@color/light_font_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_time_icon"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50121653" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>